# NeuronWired

./: .clang-format  .gitignore  .gitmodules  .releaserc  CMakeLists.txt  CMakeListsUser.txt  memmap_mainProgram.ld  platformio.ini
.github/workflows/: build.yml  main.yml  release.yml
docs/: CHANGELOG.md  HID.md  How to compile.md  Kaleidoscope.md  backlog.puml
lib/: CMakeLists.txt
lib/Arduino/: CMakeLists.txt  README.txt
lib/Arduino/ArduinoCore-API/api/: Print.cpp
lib/Arduino/ArduinoCore-API/test/src/Stream/: test_parseFloat.cpp
lib/Arduino/ArduinoCore-API/test/src/String/: StringPrinter.h  test_String.cpp  test_characterAccessFunc.cpp  test_compareTo.cpp  test_comparisonFunc.cpp  test_concat.cpp  test_indexOf.cpp  test_lastIndexOf.cpp  test_length.cpp  test_operators.cpp  test_remove.cpp  test_replace.cpp  test_substring.cpp  test_toDouble.cpp  test_toFloat.cpp  test_toInt.cpp  test_toLowerCase.cpp  test_toUpperCase.cpp  test_trim.cpp
lib/Arduino/libraries/Adafruit_TinyUSB_Arduino/src/arduino/ports/esp32/: tusb_config_esp32.h
lib/Arduino/libraries/Adafruit_TinyUSB_Arduino/src/class/audio/: audio_device.c
lib/Arduino/libraries/Adafruit_TinyUSB_Arduino/src/device/: usbd.c
lib/Arduino/libraries/Adafruit_TinyUSB_Arduino/src/host/: usbh.c
lib/Arduino/libraries/Adafruit_TinyUSB_Arduino/src/portable/analog/max3421/: hcd_max3421.c
lib/CRC/: CMakeLists.txt
lib/CRC/src/: CRC.cpp  CRC.h  CRC_wrapper.cpp  CRC_wrapper.h
lib/Communications/: CMakeLists.txt
lib/Communications/src/: Communications.h
lib/Communications/src/device/defyWN/: CommunicationsWN.cpp
lib/EEPROM/: CMakeLists.txt
lib/EEPROM/src/: EEPROM.cpp  EEPROM.h
lib/FIFO_BUFFER/: CmakeLists.txt
lib/Fifo_buffer/src/: Fifo_buffer.cpp  Fifo_buffer.h
lib/Kaleidoscope/src/: Kaleidoscope-Hardware-Dygma-Wired.h  Kaleidoscope-Ranges.h
lib/Kaleidoscope/src/kaleidoscope/device/dygma/: DefyWN.cpp  DefyWN.h  Wired.cpp  Wired.h
lib/Kaleidoscope/src/kaleidoscope/device/dygma/defyWN/: Hand.cpp  Hand.h  SettingsConfigurator.cpp  SettingsConfigurator.h
lib/Kaleidoscope/src/kaleidoscope/device/dygma/wired/: Communications.h  Focus.cpp  Focus.h  Hand.cpp  Hand.h  Keyboard.cpp  Keyboard.h  SPIComms.cpp  SPIComms.h  SPICommunications.h  SPIComunications.h  SPII.cpp  SPII.h  SideFlash.h  Side_communications_protocol.h  SpiPort.cpp  SpiPort.h  TWI.cpp  TWI.h
lib/Kaleidoscope/src/kaleidoscope/driver/bootloader/rp2040/: UF2.h
lib/Kaleidoscope/src/kaleidoscope/plugin/: DynamicMacros.cpp  DynamicSuperKeys.cpp  DynamicSuperKeys.h  EEPROM-Settings.cpp  HostPowerManagement.cpp  HostPowerManagement.h  IdleLEDs.cpp  LED-Palette-Theme.cpp  LEDControl.cpp  LEDControl.h  PersistentLEDMode.cpp  Qukeys.cpp
lib/Kaleidoscope/src/kaleidoscope/util/flasher/: KeyboardioI2CBootloader.h
lib/Kaleidoscope/src/kaleidoscope_internal/: shortname.h
lib/KeyboardioHID/: CMakeLists.txt
lib/KeyboardioHID/KeyboardioHID/src/BootKeyboard/: BootKeyboard.h
lib/KeyboardioHID/src/: HID-Settings.h  HID.cpp  HID.h  LEDs.h  hidDefy.cpp  hidDefy.h
lib/KeyboardioHID/src/BootKeyboard/: BootKeyboard.cpp  BootKeyboard.h
lib/KeyboardioHID/src/DeviceAPIs/: AbsoluteMouseAPI.h  AbsoluteMouseAPI.hpp
lib/KeyboardioHID/src/MultiReport/: AbsoluteMouse.cpp  AbsoluteMouse.h  ConsumerControl.cpp  ConsumerControl.h  Gamepad.cpp  Gamepad.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h  SystemControl.cpp  SystemControl.h
lib/KeyboardioHID/src/SingleReport/: SingleAbsoluteMouse.cpp  SingleAbsoluteMouse.h
lib/KeyboardioHID/src/arch/: RP2040USB.cpp  RP2040USB.h  SerialUSB.cpp  SerialUSB.h
lib/MCP3428/: CMakeLists.txt
lib/MCP3428/src/: MCP3428.cpp  MCP3428.h
lib/PluginLedLibrary/: CMakeLists.txt
lib/PluginLedLibrary/src/: Colormap-Defy.cpp  Colormap-Defy.h  DefaultColormap.cpp  DefaultColormap.h  LED-Palette-Theme-Defy.cpp  LED-Palette-Theme-Defy.h  LEDEffect-Rainbow-Defy.cpp  LEDEffect-Rainbow-Defy.h  LEDEffect-SolidColor-Defy.cpp  LEDEffect-SolidColor-Defy.h  LedCommon.h  LedModeCommunication.h  LedModeSerializable-Layer.h  LedModeSerializable-Rainbow.h  LedModeSerializable-RainbowWave.h  LedModeSerializable-SolidColor.h  LedModeSerializable.h
lib/PluginUpgrade/: CMakeLists.txt
lib/PluginUpgrade/example/: package-lock.json  package.json  upgradeExample.js  upgradeExample.py
lib/PluginUpgrade/src/: FLASH_Upgrade.cpp  FLASH_Upgrade.h  Upgrade.cpp  Upgrade.h
lib/RP_platform/hal/: hal_config.h  hal_defines.h
lib/RP_platform/hal/mcu/: hal_mcu_dma_ll.h  hal_mcu_gpio_ll.h  hal_mcu_mutex_ll.h  hal_mcu_spi_ll.h
lib/RP_platform/hal/mcu/rp20/: hal_ll_rp20xx.h  hal_ll_rp20xx_dma.c  hal_ll_rp20xx_dma.h  hal_ll_rp20xx_gpio.c  hal_ll_rp20xx_gpio.h  hal_ll_rp20xx_mutex.c  hal_ll_rp20xx_mutex.h  hal_ll_rp20xx_spi.c  hal_ll_rp20xx_spi.h
lib/RP_platform/hal/mcu/rp20/rp2040/: hal_ll_rp2040_private.h
lib/RP_platform/middleware/: dl_assert.h  dl_middleware.h  dl_types.h
lib/RP_platform/middleware/halsep/: hal_mcu_dma.c  hal_mcu_dma.h  hal_mcu_gpio.c  hal_mcu_gpio.h  hal_mcu_mutex.c  hal_mcu_mutex.h  hal_mcu_spi.c  hal_mcu_spi.h
lib/RP_platform/middleware/memory/: heap.c  heap.h
lib/RP_platform/middleware/utils/: dl_crc32.c  dl_crc32.h  mutex.h  utils.h
lib/SPICommunications/src/: Callback.h  Communications.h  KeyScanner_communications_protocol.h  Side_communications_protocol.h  SpiComms.cpp  SpiComms.h
lib/SPICommunications/src/device/defyWN/: CommunicationsWN.cpp
lib/SPISlave/: CMakeLists.txt
lib/SPISlave/src/: SPISlave.cpp  SPISlave.h  SpiPort.cpp  SpiPort.h  Spi_slave.cpp  Spi_slave.h
lib/SPISlave/src/link/: spi_link_def.h  spi_link_slave.c  spi_link_slave.h
lib/Time_counter/: CMakeLists.txt
lib/Time_counter/src/: Time_counter.c  Time_counter.h
lib/kaleidoscope/: CMakeLists.txt
src/: DefyFirmwareVersion.cpp  EEPROMPadding.cpp  EEPROMUpgrade.cpp  EEPROMUpgrade.h  IntegrationTest.cpp  IntegrationTest.h  LED-CapsLockLight.cpp  RP2040_firmware.h  RaiseFirmwareVersion.cpp  RaiseIdleLEDs.cpp  SPIComunications.cpp  SPIComunications.h  Watchdog_timer.h  common.h  config_app.h  hid_report_descriptor.cpp  main.cpp
test/: main.cpp
(+2 files in other folders)
