add_library(Arduino INTERFACE)

target_include_directories(Arduino
        INTERFACE
		cores/rp2040
		cores/rp2040/api
		cores/rp2040/api/deprecated-avr-comp
		include
		include/pico_base
		variants/rpipico
		${PICO_SDK_PATH}/lib/tinyusb/src/
		${PICO_SDK_PATH}/src/boards/include
		${PICO_SDK_PATH}/src/common/pico_base/include
		${PICO_SDK_PATH}/src/common/pico_binary_info/include
		${PICO_SDK_PATH}/src/common/pico_bit_ops/include
		${PICO_SDK_PATH}/src/common/pico_divider/include
		${PICO_SDK_PATH}/src/common/pico_stdlib/include
		${PICO_SDK_PATH}/src/common/pico_sync/include
		${PICO_SDK_PATH}/src/common/pico_time/include
		${PICO_SDK_PATH}/src/common/pico_usb_reset_interface/include
		${PICO_SDK_PATH}/src/common/pico_util/include
		${PICO_SDK_PATH}/src/rp2040/hardware_regs/include
		${PICO_SDK_PATH}/src/rp2040/hardware_structs/include
		${PICO_SDK_PATH}/src/rp2_common/cmsis/include
		${PICO_SDK_PATH}/src/rp2_common/cmsis/stub/CMSIS/Core/Include
		${PICO_SDK_PATH}/src/rp2_common/cmsis/stub/CMSIS/Device/RaspberryPi/RP2040/Include
		${PICO_SDK_PATH}/src/rp2_common/hardware_adc/include
		${PICO_SDK_PATH}/src/rp2_common/hardware_base/include
		${PICO_SDK_PATH}/src/rp2_common/hardware_claim/include
		${PICO_SDK_PATH}/src/rp2_common/hardware_clocks/include
		${PICO_SDK_PATH}/src/rp2_common/hardware_divider/include
		${PICO_SDK_PATH}/src/rp2_common/hardware_dma/include
		${PICO_SDK_PATH}/src/rp2_common/hardware_exception/include
		${PICO_SDK_PATH}/src/rp2_common/hardware_flash/include
		${PICO_SDK_PATH}/src/rp2_common/hardware_gpio/include
		${PICO_SDK_PATH}/src/rp2_common/hardware_i2c/include
		${PICO_SDK_PATH}/src/rp2_common/hardware_interp/include
		${PICO_SDK_PATH}/src/rp2_common/hardware_irq/include
		${PICO_SDK_PATH}/src/rp2_common/hardware_rtc/include
		${PICO_SDK_PATH}/src/rp2_common/hardware_pio/include
		${PICO_SDK_PATH}/src/rp2_common/hardware_pll/include
		${PICO_SDK_PATH}/src/rp2_common/hardware_pwm/include
		${PICO_SDK_PATH}/src/rp2_common/hardware_resets/include
		${PICO_SDK_PATH}/src/rp2_common/hardware_spi/include
		${PICO_SDK_PATH}/src/rp2_common/hardware_sync/include
		${PICO_SDK_PATH}/src/rp2_common/hardware_timer/include
		${PICO_SDK_PATH}/src/rp2_common/hardware_uart/include
		${PICO_SDK_PATH}/src/rp2_common/hardware_vreg/include
		${PICO_SDK_PATH}/src/rp2_common/hardware_watchdog/include
		${PICO_SDK_PATH}/src/rp2_common/hardware_xosc/include
		${PICO_SDK_PATH}/src/rp2_common/pico_async_context/include
		${PICO_SDK_PATH}/src/rp2_common/pico_bootrom/include
		${PICO_SDK_PATH}/src/rp2_common/pico_btstack/include
		${PICO_SDK_PATH}/src/rp2_common/pico_cyw43_arch/include
		${PICO_SDK_PATH}/src/rp2_common/pico_cyw43_driver/include
		${PICO_SDK_PATH}/src/rp2_common/pico_double/include
		${PICO_SDK_PATH}/src/rp2_common/pico_float/include
		${PICO_SDK_PATH}/src/rp2_common/pico_int64_ops/include
		${PICO_SDK_PATH}/src/rp2_common/pico_lwip/include
		${PICO_SDK_PATH}/src/rp2_common/pico_multicore/include
		${PICO_SDK_PATH}/src/rp2_common/pico_platform/include
		${PICO_SDK_PATH}/src/rp2_common/pico_printf/include
		${PICO_SDK_PATH}/src/rp2_common/pico_runtime/include
		${PICO_SDK_PATH}/src/rp2_common/pico_rand/include
		${PICO_SDK_PATH}/src/rp2_common/pico_stdio/include
		${PICO_SDK_PATH}/src/rp2_common/pico_stdio_uart/include
		${PICO_SDK_PATH}/src/rp2_common/pico_unique_id/include
		${PICO_SDK_PATH}/lib/cyw43-driver/src
		${PICO_SDK_PATH}/lib/lwip/src/include
		${PICO_SDK_PATH}/lib/btstack/src
		${PICO_SDK_PATH}/lib/btstack/platform/embedded
        )

target_sources(Arduino
        INTERFACE
        )

target_link_libraries(Arduino
        INTERFACE
        )
